change 06-b terminado
